          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp:  libopenvrml-gl
          no longer depends on glut.

        * src/openvrml/OpenVRML/script.cpp:  Fixed bug in JavaScript
          SFRotation constructor that takes two vectors.

        * src/openvrml/OpenVRML/field.h,
          src/openvrml/OpenVRML/field.cpp:  Added addElement methods to
          MF* classes.

2002-11-19  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/MathUtils.cpp,
          src/openvrml/OpenVRML/MathUtils.h,
          src/openvrml/OpenVRML/Viewer.cpp,
          src/openvrml/OpenVRML/VrmlFrustum.cpp,
          src/openvrml/OpenVRML/VrmlMatrix.cpp,
          src/openvrml/OpenVRML/VrmlRenderContext.h,
          src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/bvolume.cpp,
          src/openvrml/OpenVRML/field.cpp, src/openvrml/OpenVRML/field.h
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp: Doc-comment
          fix-ups.

        * doc/openvrml.css: Style sheet improvements.

2002-11-14  Braden McDaniel  <braden@endoframe.com>

        * m4/jpeg.m4, m4/png.m4, m4/zlib.m4: Fixed problem with macros
          when using config.cache.

        * src/lookat/Makefile.am: Updated obsolete substitutions
          JAVA_CFLAGS, JAVA_LIBS to JNI_CFLAGS, JNI_LIBS.

        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp: Fixed Win32
          calling convention stuff on GL callbacks for Cygwin, MinGW.

2002-11-11  Thomas Flynn  <tflynn@users.sourceforge.net>

        * src/openvrml/OpenVRML/ScriptJDK.cpp: Fix bugs in
          MFRotation::setValue, MFTime::insertValue and MFVec2f::addValue.

        * src/openvrml/OpenVRML/field.cpp: Fix problem with
          ArrayVector::erase.

        * java/vrml/field/MFRotation.java: Fix bug in setValue method.

        * java/vrml/field/MFVec2f.java, java/vrml/field/MFVec3f.java: