@@ -3,8 +3,9 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: openvrml-gl
+Name: OpenVRML-GL
 Description: OpenGL renderer for OpenVRML.
 Version: @VERSION@
-Libs: -L${libdir} -lopenvrml-gl @GLUT_LIBS@ @GL_LIBS@ @X_PRE_LIBS@ @X_LIBS@ @X_EXTRA_LIBS@
-Cflags: -I${includedir} @X_CFLAGS@
+Requires: openvrml = @VERSION@
+Libs: -L${libdir} -lopenvrml-gl @GL_LIBS@
+Cflags: -I${includedir} @GL_CFLAGS@
